--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <link type="text/css" href="{{ url_for('static', filename='css/styles.css')}}" rel="stylesheet">
     <link rel="icon" href="https://images.squarespace-cdn.com/content/v1/60167355d5e6a55235d6abe6/1613048391299-3735Q3T9VF3AQHTJ15NB/IMG_1570.jpeg">
+    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </head>
 
 <body>
